Final commit from work

--- a/src/main/webapp/CreateTeam.html
+++ b/src/main/webapp/CreateTeam.html
@@ -25,12 +25,7 @@
       <a href="CreateTeam.html">Create Team</a>
                   </div>
           </div> 
-            <div class="dropdown">
-    <button class="dropbtn">Forum
-      <i class="fa fa-caret-down"></i>
-    </button>
-           
-            </div>
+
              <div class="dropdown">
     <button class="dropbtn">The Moves
       <i class="fa fa-caret-down"></i>
@@ -43,7 +38,7 @@
         
          <section id = "team-creator">
                <h3> Create a Team </h3>
-        If you're looking to create a team, you need to make sure you have adminstrative privileges first by subscribing. <br>
+        If you're looking to create a team, you need to make sure you have administrative privileges first by subscribing. <br>
     <form id = "tc-form">  
     <input type = "text" id = "team-name" name = "team-name" placeholder = "Team Name">
         <br>
