--- a/src/main/webapp/ViewTheMoves.html
+++ b/src/main/webapp/ViewTheMoves.html
@@ -45,10 +45,15 @@
         </div>
         
         <section id = "moves"> 
-        <h4> Move name: The Spinning Orange </h4>
+   
+        </section>
+    </body>
+</html>
+
+/* <h4> Move name: The Spinning Orange </h4>
         <img src="exampleImage.png" width= "30%" height = "30%">
             
-        <div class="container">
+ <!--        <div class="container">
     <div class="col-lg-4 col-sm-6 text-center">
     <div class="well">
         <h4> Any questions</h4>
@@ -75,7 +80,4 @@
     </ul>
     </div>
 </div>    
-            </div>    
-        </section>
-    </body>
-</html>
+            </div>    -->
