--- a/src/main/webapp/registerAdmin.html
+++ b/src/main/webapp/registerAdmin.html
@@ -9,16 +9,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   </head>
   <body>
-    <header>
-      <h2> MOVE </h2>
-    </header>
     <div class= "navbar">
-      <a href="homepage.html">Home</a>
+      <a href="index.html">Home</a>
     </div>
-  
+  <h2> Admin Registration </h2>
     <section id = "registration"> 
     <form id = "registration-form"> 
-        <h3> Admin Registration </h3>
+        
     <input type = "email" id = "admin-email" name = "email" placeholder = "Email">
         <br>
         <input type ="text" id = "admin-first-name" name = "first-name" placeholder = "First Name">
@@ -32,7 +29,7 @@
         <input type ="button" name = "register" value = "Register" onclick= "submitRegAdmin()" >
         <input type ="button" name = "Back" value = "Back" onclick= "back()" >
     </form>
-    
+    <!--
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_xclick-subscriptions">
 <input type="hidden" name="business" value="louis.goldfinch@academytrainee.com">
@@ -50,7 +47,7 @@
 <input type="hidden" name="bn" value="PP-SubscriptionsBF:btn_subscribeCC_LG.gif:NonHostedGuest">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+</form> -->
     </section>
  </body>
   
